Güncellenmiş fotoğraflar ve düzenlemeler

--- a/about.html
+++ b/about.html
@@ -1,18 +1,27 @@
 <!DOCTYPE html>
 <html lang="tr">
 <head>
-    <meta charset=UTF-8">
+    <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Hakkımızda</title>
+    <title>Özge Web Sitesi - Hakkımızda</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header>
-        <h1>Hakkımızda</h1>
+        <h1>Özge ile Paylaşılan Anılar</h1>
+        <nav>
+            <a href="index.html">Ana Sayfa</a>
+            <a href="gallery.html">Galeri</a>
+            <a href="about.html">Hakkımızda</a>
+        </nav>
     </header>
-    <main>
-        <p>Merhaba Özge. Umarım iyisindir. Bu site ikimiz hakkında olan bazı şeyleri içeriyor. 14 Nisan'da başlayan masal gibi bir ilişki. Hayata dair ne var ne yoksa sende bulmuştum hayatımda yanında bulunduğumda huzuru iliklerime kadar hissettiğim tek kişisin. Öyle bir ilişki yaşamışız ki 2 ay sürmüş olsa bile sanki 21 yıllık hayatımın her döneminde sen vardın gibi. Bana çok şey kattın. Mesela bu şehri hiç sevmezdim ama şimdi her yanında senle bir anımız var, geçtiğimiz sokaklar, oturduğumuz banklar... Seni yaptığım koskoca bir hata yüzünden çok sert bir şekilde kaybettim. Sanki hayatımı kaybetmişim gibir bi şeydi. Umarım bir gün seni geri kazanabilirim Özge. Seni çok özlüyorum.</p>
-        <a href="index.html" class="button">Geri Dön</a>
-    </main>
+
+    <section class="about">
+        <h2>Hakkımızda</h2>
+        <p>Bir hikayeye başlamıştık seninle sonunu getiremediğimiz. Her zaman içimde ukde kalır belki bu his ama ben öyle olsun istemiyorum Özge.</p>
+        <p>Bu hikayenin sonunu getirmemek istiyorum. Hayatının peşinden git diyorlar. Zaten öyle yapıp senin peşinden gidiyorum. Sanki kaybolmuşum. Seni çok özlüyorum</p>
+        <a href="gallery.html" class="btn">Galeriyi Görüntüle</a>
+    </section>
 </body>
 </html>
+
