--- a/index.html
+++ b/index.html
@@ -10,40 +10,22 @@
     <header>
         <h1>Hoş geldin Özge!</h1>
         <p>Bu site senin için hazırlandı. 💙🧡</p>
-    </header>
-    <main>
-        <section id="galeri">
-            <h2>Fotoğraf Galerisi</h2>
-            <div class="gallery">
-                <img src="images/foto1.jpeg" alt="Fotoğraf 1">
-                <img src="images/foto2.jpeg" alt="Fotoğraf 2">
-                <img src="images/foto3.jpeg" alt="Fotoğraf 3">
-                <img src="images/foto4.jpeg" alt="Fotoğraf 4">
-                <img src="images/foto5.jpeg" alt="Fotoğraf 5">
-                <img src="images/foto6.jpeg" alt="Fotoğraf 6">
-                <img src="images/foto7.jpeg" alt="Fotoğraf 7">
-                <img src="images/foto8.jpeg" alt="Fotoğraf 8">
-                <img src="images/foto9.jpeg" alt="Fotoğraf 9">
-                <img src="images/foto10.jpeg" alt="Fotoğraf 10">
-                <img src="images/foto11.jpeg" alt="Fotoğraf 11">
-                <img src="images/foto12.jpeg" alt="Fotoğraf 12">
-                <img src="images/foto13.jpeg" alt="Fotoğraf 13">
-                <img src="images/foto14.jpeg" alt="Fotoğraf 14">
-                <img src="images/foto15.jpeg" alt="Fotoğraf 15">
-                <img src="images/foto16.jpeg" alt="Fotoğraf 16">
-                <img src="images/foto17.jpeg" alt="Fotoğraf 17">
-                <img src="images/foto18.jpeg" alt="Fotoğraf 18">
-                <img src="images/foto19.jpeg" alt="Fotoğraf 19">
-                <img src="images/foto20.jpeg" alt="Fotoğraf 20">
-                <img src="images/foto21.jpeg" alt="Fotoğraf 21">
-                <img src="images/foto22.jpeg" alt="Fotoğraf 22">
-                <img src="images/foto23.jpeg" alt="Fotoğraf 23">
-            </div>
-        </section>
         <nav>
-            <a href="about.html" class="button">Hakkımızda</a>
+            <a href="index.html">Ana Sayfa</a>
+            <a href="gallery.html">Galeri</a>
+            <a href="about.html">Hakkımızda</a> <!-- Hakkımızda sayfasına bağlantı ekledik -->
         </nav>
-    </main>
+    </header>
+
+    <section class="intro">
+        <h2>Hoş geldin Özge!</h2>
+        <p>Galeride beraber geçirdiğimiz güzel günlere ait anılar var.</p>
+        <a href="gallery.html" class="btn">Galeriyi Görüntüle</a>
+    </section>
+
+    <section class="about-link">
+        <p><a href="about.html">İçimden geçen bazı şeyleri görmek Hakkımızdaya tıklayabilirsin</a></p>
+    </section>
 </body>
 </html>
 
