--- a/gallery.html
+++ b/gallery.html
@@ -21,73 +21,73 @@
         <div class="gallery-container">
             <!-- Fotoğraflar -->
             <div class="gallery-item">
-                <img src="foto1.jpeg" alt="Fotoğraf 1">
+                <img src="images/foto1.jpeg" alt="Fotoğraf 1">
             </div>
             <div class="gallery-item">
-                <img src="foto2.jpeg" alt="Fotoğraf 2">
+                <img src="images/foto2.jpeg" alt="Fotoğraf 2">
             </div>
             <div class="gallery-item">
-                <img src="foto3.jpeg" alt="Fotoğraf 3">
+                <img src="images/foto3.jpeg" alt="Fotoğraf 3">
             </div>
             <div class="gallery-item">
-                <img src="foto4.jpeg" alt="Fotoğraf 4">
+                <img src="images/foto4.jpeg" alt="Fotoğraf 4">
             </div>
             <div class="gallery-item">
-                <img src="foto5.jpeg" alt="Fotoğraf 5">
+                <img src="images/foto5.jpeg" alt="Fotoğraf 5">
             </div>
             <div class="gallery-item">
-                <img src="foto6.jpeg" alt="Fotoğraf 6">
+                <img src="images/foto6.jpeg" alt="Fotoğraf 6">
             </div>
             <div class="gallery-item">
-                <img src="foto7.jpeg" alt="Fotoğraf 7">
+                <img src="images/foto7.jpeg" alt="Fotoğraf 7">
             </div>
             <div class="gallery-item">
-                <img src="foto8.jpeg" alt="Fotoğraf 8">
+                <img src="images/foto8.jpeg" alt="Fotoğraf 8">
             </div>
             <div class="gallery-item">
-                <img src="foto9.jpeg" alt="Fotoğraf 9">
+                <img src="images/foto9.jpeg" alt="Fotoğraf 9">
             </div>
             <div class="gallery-item">
-                <img src="foto10.jpeg" alt="Fotoğraf 10">
+                <img src="images/foto10.jpeg" alt="Fotoğraf 10">
             </div>
             <div class="gallery-item">
-                <img src="foto11.jpeg" alt="Fotoğraf 11">
+                <img src="images/foto11.jpeg" alt="Fotoğraf 11">
             </div>
             <div class="gallery-item">
-                <img src="foto12.jpeg" alt="Fotoğraf 12">
+                <img src="images/foto12.jpeg" alt="Fotoğraf 12">
             </div>
             <div class="gallery-item">
-                <img src="foto13.jpeg" alt="Fotoğraf 13">
+                <img src="images/foto13.jpeg" alt="Fotoğraf 13">
             </div>
             <div class="gallery-item">
-                <img src="foto14.jpeg" alt="Fotoğraf 14">
+                <img src="images/foto14.jpeg" alt="Fotoğraf 14">
             </div>
             <div class="gallery-item">
-                <img src="foto15.jpeg" alt="Fotoğraf 15">
+                <img src="images/foto15.jpeg" alt="Fotoğraf 15">
             </div>
             <div class="gallery-item">
-                <img src="foto16.jpeg" alt="Fotoğraf 16">
+                <img src="images/foto16.jpeg" alt="Fotoğraf 16">
             </div>
             <div class="gallery-item">
-                <img src="foto17.jpeg" alt="Fotoğraf 17">
+                <img src="images/foto17.jpeg" alt="Fotoğraf 17">
             </div>
             <div class="gallery-item">
-                <img src="foto18.jpeg" alt="Fotoğraf 18">
+                <img src="images/foto18.jpeg" alt="Fotoğraf 18">
             </div>
             <div class="gallery-item">
-                <img src="foto19.jpeg" alt="Fotoğraf 19">
+                <img src="images/foto19.jpeg" alt="Fotoğraf 19">
             </div>
             <div class="gallery-item">
-                <img src="foto20.jpeg" alt="Fotoğraf 20">
+                <img src="images/foto20.jpeg" alt="Fotoğraf 20">
             </div>
             <div class="gallery-item">
-                <img src="foto21.jpeg" alt="Fotoğraf 21">
+                <img src="images/foto21.jpeg" alt="Fotoğraf 21">
             </div>
             <div class="gallery-item">
-                <img src="foto22.jpeg" alt="Fotoğraf 22">
+                <img src="images/foto22.jpeg" alt="Fotoğraf 22">
             </div>
             <div class="gallery-item">
-                <img src="foto23.jpeg" alt="Fotoğraf 23">
+                <img src="images/foto23.jpeg" alt="Fotoğraf 23">
             </div>
         </div>
     </section>
