--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
     <section class="intro">
         <h2>Hoş geldin Özge!</h2>
-        <p>Galeride beraber geçirdiğimiz güzel günlere ait anılar var.</p>
+        <p>Bu sitede anılarımız var.</p>
         <a href="gallery.html" class="btn">Galeriyi Görüntüle</a>
     </section>
 
