--- a/about.html
+++ b/about.html
@@ -18,8 +18,8 @@
 
     <section class="about">
         <h2>Hakkımızda</h2>
-        <p>Bir hikayeye başlamıştık seninle sonunu getiremediğimiz. Her zaman içimde ukde kalır belki bu his ama ben öyle olsun istemiyorum Özge.</p>
-        <p>Bu hikayenin sonunu getirmemek istiyorum. Hayatının peşinden git diyorlar. Zaten öyle yapıp senin peşinden gidiyorum. Sanki kaybolmuşum. Seni çok özlüyorum</p>
+        <p>Hayatımın anlamı, biriciğim 15 Nisan günü seninle tekrar çok güzel bir yola çıktık.</p>
+        <p>Bu yolda bazen sıkıntılı günlerimizi bazen de çok güzel günlerimiz olacak. Seni her daim sevip, koruyup kollayacağım. Özgem, söz veriyorum içinde verdiğin bütün savaşları sana kazandiracağım. Bu siteyi biz ayrıyken yapmıştım ve hiç değiştirmemiştim ama bundan sonra bu siteye çok daha güzel seyler ekleyeceğiz. Seni Çok Seviyorum.</p>
         <a href="gallery.html" class="btn">Galeriyi Görüntüle</a>
     </section>
 </body>
