--- a/about.html
+++ b/about.html
@@ -1,27 +1,39 @@
 <!DOCTYPE html>
 <html lang="tr">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Özge Web Sitesi - Hakkımızda</title>
-    <link rel="stylesheet" href="style.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>About - Özge</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <header>
-        <h1>Özge ile Paylaşılan Anılar</h1>
-        <nav>
-            <a href="index.html">Ana Sayfa</a>
-            <a href="gallery.html">Galeri</a>
-            <a href="about.html">Hakkımızda</a>
-        </nav>
-    </header>
+  <header>
+    <nav>
+      <ul>
+        <li><a href="index.html">Ana Sayfa</a></li>
+        <li><a href="about.html" class="active">Hakkında</a></li>
+        <li><a href="gallery.html">Galeri</a></li>
+        <li><a href="contact.html">İletişim</a></li>
+      </ul>
+    </nav>
+  </header>
 
-    <section class="about">
-        <h2>Hakkımızda</h2>
-        <p>Hayatımın anlamı, biriciğim 15 Nisan günü seninle tekrar çok güzel bir yola çıktık.</p>
-        <p>Bu yolda bazen sıkıntılı günlerimizi bazen de çok güzel günlerimiz olacak. Seni her daim sevip, koruyup kollayacağım. Özgem, söz veriyorum içinde verdiğin bütün savaşları sana kazandiracağım. Bu siteyi biz ayrıyken yapmıştım ve hiç değiştirmemiştim ama bundan sonra bu siteye çok daha güzel seyler ekleyeceğiz. Seni Çok Seviyorum.</p>
-        <a href="gallery.html" class="btn">Galeriyi Görüntüle</a>
+  <main>
+    <section id="about">
+      <h1>About</h1>
+      <p>
+        Özgem, biricik sevgilim şu hayattaki tek isteğim sensin. 
+        Bana o gün bu şansı verdiğin için sana ne kadar minnettarım bilemezsin sevgilim. 
+        Şu hayattaki en büyük amacım senin o minnoş, tatlı, güzel yüzünü güldürmek aşkım ve umarım da yapabiliyorumdur sevgilim. 
+        Ömrümün en güzel zamanlarını geçiriyorum sayende aşkım bu hayatı benim için daha yaşanabilir, daha mutlu bir yer haline getirdiğin için sana sonsuz teşekkür ederim bir tanem. 
+        Şarkımızın da dediği gibi. Evim oldun kurtardın beni be dilerim ki sonum olursun sevgilim. 
+        Seni çok ama çok seviyorum biricik sevgilim iyi ki varsın.
+      </p>
     </section>
+  </main>
+
+  <footer>
+    <p>&copy; 2025 Özge</p>
+  </footer>
 </body>
 </html>
-
