--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Özge</title>
+    <title>Özge&Kaan</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header>
-        <h1>Hoş geldin Özge!</h1>
-        <p>Bu site senin için hazırlandı. 💙🧡</p>
+        <h1>Özge&Kaan Web Sitesi</h1>
+        <p>Bu site bizim için sevgilim. 💙🧡</p>
         <nav>
             <a href="index.html">Ana Sayfa</a>
             <a href="gallery.html">Galeri</a>
@@ -18,7 +18,7 @@
     </header>
 
     <section class="intro">
-        <h2>Hoş geldin Özge!</h2>
+        <h2>Hoş geldiniz</h2>
         <p>Bu sitede anılarımız var.</p>
         <a href="gallery.html" class="btn">Galeriyi Görüntüle</a>
     </section>
