--- a/gallery.html
+++ b/gallery.html
@@ -11,7 +11,7 @@
         <h1>Güzel anılar</h1>
         <nav>
             <a href="index.html">Ana Sayfa</a>
-            <a href="gallery.html">Galeri</a>
+            <a href="gallery.html" class="active">Galeri</a>
             <a href="about.html">Hakkımızda</a>
         </nav>
     </header>
@@ -19,76 +19,49 @@
     <section class="gallery">
         <h2>Galerimiz</h2>
         <div class="gallery-container">
-            <!-- Fotoğraflar -->
-            <div class="gallery-item">
-                <img src="images/foto1.jpeg" alt="Fotoğraf 1">
-            </div>
-            <div class="gallery-item">
-                <img src="images/foto2.jpeg" alt="Fotoğraf 2">
-            </div>
-            <div class="gallery-item">
-                <img src="images/foto3.jpeg" alt="Fotoğraf 3">
-            </div>
-            <div class="gallery-item">
-                <img src="images/foto4.jpeg" alt="Fotoğraf 4">
-            </div>
-            <div class="gallery-item">
-                <img src="images/foto5.jpeg" alt="Fotoğraf 5">
-            </div>
-            <div class="gallery-item">
-                <img src="images/foto6.jpeg" alt="Fotoğraf 6">
-            </div>
-            <div class="gallery-item">
-                <img src="images/foto7.jpeg" alt="Fotoğraf 7">
-            </div>
-            <div class="gallery-item">
-                <img src="images/foto8.jpeg" alt="Fotoğraf 8">
-            </div>
-            <div class="gallery-item">
-                <img src="images/foto9.jpeg" alt="Fotoğraf 9">
-            </div>
-            <div class="gallery-item">
-                <img src="images/foto10.jpeg" alt="Fotoğraf 10">
-            </div>
-            <div class="gallery-item">
-                <img src="images/foto11.jpeg" alt="Fotoğraf 11">
-            </div>
-            <div class="gallery-item">
-                <img src="images/foto12.jpeg" alt="Fotoğraf 12">
-            </div>
-            <div class="gallery-item">
-                <img src="images/foto13.jpeg" alt="Fotoğraf 13">
-            </div>
-            <div class="gallery-item">
-                <img src="images/foto14.jpeg" alt="Fotoğraf 14">
-            </div>
-            <div class="gallery-item">
-                <img src="images/foto15.jpeg" alt="Fotoğraf 15">
-            </div>
-            <div class="gallery-item">
-                <img src="images/foto16.jpeg" alt="Fotoğraf 16">
-            </div>
-            <div class="gallery-item">
-                <img src="images/foto17.jpeg" alt="Fotoğraf 17">
-            </div>
-            <div class="gallery-item">
-                <img src="images/foto18.jpeg" alt="Fotoğraf 18">
-            </div>
-            <div class="gallery-item">
-                <img src="images/foto19.jpeg" alt="Fotoğraf 19">
-            </div>
-            <div class="gallery-item">
-                <img src="images/foto20.jpeg" alt="Fotoğraf 20">
-            </div>
-            <div class="gallery-item">
-                <img src="images/foto21.jpeg" alt="Fotoğraf 21">
-            </div>
-            <div class="gallery-item">
-                <img src="images/foto22.jpeg" alt="Fotoğraf 22">
-            </div>
-            <div class="gallery-item">
-                <img src="images/foto23.jpeg" alt="Fotoğraf 23">
-            </div>
+            <!-- Eski Fotoğraflar (1-23) -->
+            <div class="gallery-item"><img src="images/foto1.jpeg" alt="Fotoğraf 1"></div>
+            <div class="gallery-item"><img src="images/foto2.jpeg" alt="Fotoğraf 2"></div>
+            <div class="gallery-item"><img src="images/foto3.jpeg" alt="Fotoğraf 3"></div>
+            <div class="gallery-item"><img src="images/foto4.jpeg" alt="Fotoğraf 4"></div>
+            <div class="gallery-item"><img src="images/foto5.jpeg" alt="Fotoğraf 5"></div>
+            <div class="gallery-item"><img src="images/foto6.jpeg" alt="Fotoğraf 6"></div>
+            <div class="gallery-item"><img src="images/foto7.jpeg" alt="Fotoğraf 7"></div>
+            <div class="gallery-item"><img src="images/foto8.jpeg" alt="Fotoğraf 8"></div>
+            <div class="gallery-item"><img src="images/foto9.jpeg" alt="Fotoğraf 9"></div>
+            <div class="gallery-item"><img src="images/foto10.jpeg" alt="Fotoğraf 10"></div>
+            <div class="gallery-item"><img src="images/foto11.jpeg" alt="Fotoğraf 11"></div>
+            <div class="gallery-item"><img src="images/foto12.jpeg" alt="Fotoğraf 12"></div>
+            <div class="gallery-item"><img src="images/foto13.jpeg" alt="Fotoğraf 13"></div>
+            <div class="gallery-item"><img src="images/foto14.jpeg" alt="Fotoğraf 14"></div>
+            <div class="gallery-item"><img src="images/foto15.jpeg" alt="Fotoğraf 15"></div>
+            <div class="gallery-item"><img src="images/foto16.jpeg" alt="Fotoğraf 16"></div>
+            <div class="gallery-item"><img src="images/foto17.jpeg" alt="Fotoğraf 17"></div>
+            <div class="gallery-item"><img src="images/foto18.jpeg" alt="Fotoğraf 18"></div>
+            <div class="gallery-item"><img src="images/foto19.jpeg" alt="Fotoğraf 19"></div>
+            <div class="gallery-item"><img src="images/foto20.jpeg" alt="Fotoğraf 20"></div>
+            <div class="gallery-item"><img src="images/foto21.jpeg" alt="Fotoğraf 21"></div>
+            <div class="gallery-item"><img src="images/foto22.jpeg" alt="Fotoğraf 22"></div>
+            <div class="gallery-item"><img src="images/foto23.jpeg" alt="Fotoğraf 23"></div>
+
+            <!-- Yeni Fotoğraflar (24-40) -->
+            <div class="gallery-item"><img src="images/foto24.jpg" alt="Fotoğraf 24"></div>
+            <div class="gallery-item"><img src="images/foto25.jpg" alt="Fotoğraf 25"></div>
+            <div class="gallery-item"><img src="images/foto26.jpg" alt="Fotoğraf 26"></div>
+            <div class="gallery-item"><img src="images/foto27.jpg" alt="Fotoğraf 27"></div>
+            <div class="gallery-item"><img src="images/foto28.jpg" alt="Fotoğraf 28"></div>
+            <div class="gallery-item"><img src="images/foto29.jpg" alt="Fotoğraf 29"></div>
+            <div class="gallery-item"><img src="images/foto30.jpg" alt="Fotoğraf 30"></div>
+            <div class="gallery-item"><img src="images/foto31.jpg" alt="Fotoğraf 31"></div>
+            <div class="gallery-item"><img src="images/foto32.jpg" alt="Fotoğraf 32"></div>
+            <div class="gallery-item"><img src="images/foto33.jpg" alt="Fotoğraf 33"></div>
+            <div class="gallery-item"><img src="images/foto34.jpg" alt="Fotoğraf 34"></div>
+            <div class="gallery-item"><img src="images/foto35.jpg" alt="Fotoğraf 35"></div>
+            <div class="gallery-item"><img src="images/foto36.jpg" alt="Fotoğraf 36"></div>
+            <div class="gallery-item"><img src="images/foto37.jpg" alt="Fotoğraf 37"></div>
+            <div class="gallery-item"><img src="images/foto38.jpg" alt="Fotoğraf 38"></div>
+            <div class="gallery-item"><img src="images/foto39.jpg" alt="Fotoğraf 39"></div>
+            <div class="gallery-item"><img src="images/foto40.jpg" alt="Fotoğraf 40"></div>
         </div>
     </section>
 
