--- a/about.html
+++ b/about.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>About - Özge</title>
+  <title>Özge&Kaan</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -20,7 +20,7 @@
 
   <main>
     <section id="about">
-      <h1>About</h1>
+      <h1>Özge&Kaan</h1>
       <p>
         Özgem, biricik sevgilim şu hayattaki tek isteğim sensin. 
         Bana o gün bu şansı verdiğin için sana ne kadar minnettarım bilemezsin sevgilim. 
