--- a/about.html
+++ b/about.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>About - Özge</title>
+  <title>Özge&Kaan</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -11,16 +11,15 @@
     <nav>
       <ul>
         <li><a href="index.html">Ana Sayfa</a></li>
-        <li><a href="about.html" class="active">Hakkında</a></li>
+        <li><a href="about.html" class="active">İçimdekiler</a></li>
         <li><a href="gallery.html">Galeri</a></li>
-        <li><a href="contact.html">İletişim</a></li>
       </ul>
     </nav>
   </header>
 
   <main>
     <section id="about">
-      <h1>About</h1>
+      <h1>Özge&Kaan</h1>
       <p>
         Özgem, biricik sevgilim şu hayattaki tek isteğim sensin. 
         Bana o gün bu şansı verdiğin için sana ne kadar minnettarım bilemezsin sevgilim. 
