--- a/about.html
+++ b/about.html
@@ -11,9 +11,8 @@
     <nav>
       <ul>
         <li><a href="index.html">Ana Sayfa</a></li>
-        <li><a href="about.html" class="active">Hakkında</a></li>
+        <li><a href="about.html" class="active">İçimdekiler</a></li>
         <li><a href="gallery.html">Galeri</a></li>
-        <li><a href="contact.html">İletişim</a></li>
       </ul>
     </nav>
   </header>
