--- a/gallery.html
+++ b/gallery.html
@@ -70,34 +70,53 @@
         <p>&copy; 2025 Özge ile Anılar. Tüm hakları saklıdır.</p>
     </footer>
 
-    <!-- Tam ekran görüntüleme alanı -->
-    <div id="fullscreen-view" class="hidden">
-        <span id="close-btn">&times;</span>
-        <img id="fullscreen-img" src="" alt="">
-    </div>
+     <div id="lightbox" class="lightbox">
+    <span class="close">&times;</span>
+    <img class="lightbox-img" id="lightbox-img">
+    <a class="prev">&#10094;</a>
+    <a class="next">&#10095;</a>
+  </div>
 
-    <script>
-        const galleryImages = document.querySelectorAll('.gallery-item img');
-        const fullscreenView = document.getElementById('fullscreen-view');
-        const fullscreenImg = document.getElementById('fullscreen-img');
-        const closeBtn = document.getElementById('close-btn');
+  <script>
+    const images = document.querySelectorAll('.gallery-img');
+    const lightbox = document.getElementById('lightbox');
+    const lightboxImg = document.getElementById('lightbox-img');
+    const close = document.querySelector('.close');
+    const next = document.querySelector('.next');
+    const prev = document.querySelector('.prev');
+    let currentIndex = 0;
 
-        galleryImages.forEach(img => {
-            img.addEventListener('click', () => {
-                fullscreenImg.src = img.src;
-                fullscreenView.classList.remove('hidden');
-            });
-        });
+    images.forEach((img, index) => {
+      img.addEventListener('click', () => {
+        currentIndex = index;
+        lightbox.style.display = 'flex';
+        lightboxImg.src = img.src;
+      });
+    });
 
-        closeBtn.addEventListener('click', () => {
-            fullscreenView.classList.add('hidden');
-        });
+    close.addEventListener('click', () => lightbox.style.display = 'none');
+    next.addEventListener('click', nextImage);
+    prev.addEventListener('click', prevImage);
 
-        fullscreenView.addEventListener('click', (e) => {
-            if (e.target === fullscreenView) {
-                fullscreenView.classList.add('hidden');
-            }
-        });
-    </script>
+    function nextImage() {
+      currentIndex = (currentIndex + 1) % images.length;
+      lightboxImg.src = images[currentIndex].src;
+    }
+
+    function prevImage() {
+      currentIndex = (currentIndex - 1 + images.length) % images.length;
+      lightboxImg.src = images[currentIndex].src;
+    }
+
+    window.addEventListener('click', (e) => {
+      if (e.target === lightbox) lightbox.style.display = 'none';
+    });
+
+    document.addEventListener('keydown', (e) => {
+      if (e.key === 'Escape') lightbox.style.display = 'none';
+      if (e.key === 'ArrowRight') nextImage();
+      if (e.key === 'ArrowLeft') prevImage();
+    });
+  </script>
 </body>
 </html>
