--- a/gallery.html
+++ b/gallery.html
@@ -21,48 +21,48 @@
         <div class="gallery-container">
             <!-- Fotoğraflar -->
             <!-- .jpeg 1-23 -->
-            <div class="gallery-item"><img src="images/foto1.jpeg" alt="Foto 1"></div>
-            <div class="gallery-item"><img src="images/foto2.jpeg" alt="Foto 2"></div>
-            <div class="gallery-item"><img src="images/foto3.jpeg" alt="Foto 3"></div>
-            <div class="gallery-item"><img src="images/foto4.jpeg" alt="Foto 4"></div>
-            <div class="gallery-item"><img src="images/foto5.jpeg" alt="Foto 5"></div>
-            <div class="gallery-item"><img src="images/foto6.jpeg" alt="Foto 6"></div>
-            <div class="gallery-item"><img src="images/foto7.jpeg" alt="Foto 7"></div>
-            <div class="gallery-item"><img src="images/foto8.jpeg" alt="Foto 8"></div>
-            <div class="gallery-item"><img src="images/foto9.jpeg" alt="Foto 9"></div>
-            <div class="gallery-item"><img src="images/foto10.jpeg" alt="Foto 10"></div>
-            <div class="gallery-item"><img src="images/foto11.jpeg" alt="Foto 11"></div>
-            <div class="gallery-item"><img src="images/foto12.jpeg" alt="Foto 12"></div>
-            <div class="gallery-item"><img src="images/foto13.jpeg" alt="Foto 13"></div>
-            <div class="gallery-item"><img src="images/foto14.jpeg" alt="Foto 14"></div>
-            <div class="gallery-item"><img src="images/foto15.jpeg" alt="Foto 15"></div>
-            <div class="gallery-item"><img src="images/foto16.jpeg" alt="Foto 16"></div>
-            <div class="gallery-item"><img src="images/foto17.jpeg" alt="Foto 17"></div>
-            <div class="gallery-item"><img src="images/foto18.jpeg" alt="Foto 18"></div>
-            <div class="gallery-item"><img src="images/foto19.jpeg" alt="Foto 19"></div>
-            <div class="gallery-item"><img src="images/foto20.jpeg" alt="Foto 20"></div>
-            <div class="gallery-item"><img src="images/foto21.jpeg" alt="Foto 21"></div>
-            <div class="gallery-item"><img src="images/foto22.jpeg" alt="Foto 22"></div>
-            <div class="gallery-item"><img src="images/foto23.jpeg" alt="Foto 23"></div>
+            <div class="gallery-item"><img class="gallery-img" src="images/foto1.jpeg" alt="Foto 1"></div>
+            <div class="gallery-item"><img class="gallery-img" src="images/foto2.jpeg" alt="Foto 2"></div>
+            <div class="gallery-item"><img class="gallery-img" src="images/foto3.jpeg" alt="Foto 3"></div>
+            <div class="gallery-item"><img class="gallery-img" src="images/foto4.jpeg" alt="Foto 4"></div>
+            <div class="gallery-item"><img class="gallery-img" src="images/foto5.jpeg" alt="Foto 5"></div>
+            <div class="gallery-item"><img class="gallery-img" src="images/foto6.jpeg" alt="Foto 6"></div>
+            <div class="gallery-item"><img class="gallery-img" src="images/foto7.jpeg" alt="Foto 7"></div>
+            <div class="gallery-item"><img class="gallery-img" src="images/foto8.jpeg" alt="Foto 8"></div>
+            <div class="gallery-item"><img class="gallery-img" src="images/foto9.jpeg" alt="Foto 9"></div>
+            <div class="gallery-item"><img class="gallery-img" src="images/foto10.jpeg" alt="Foto 10"></div>
+            <div class="gallery-item"><img class="gallery-img" src="images/foto11.jpeg" alt="Foto 11"></div>
+            <div class="gallery-item"><img class="gallery-img" src="images/foto12.jpeg" alt="Foto 12"></div>
+            <div class="gallery-item"><img class="gallery-img" src="images/foto13.jpeg" alt="Foto 13"></div>
+            <div class="gallery-item"><img class="gallery-img" src="images/foto14.jpeg" alt="Foto 14"></div>
+            <div class="gallery-item"><img class="gallery-img" src="images/foto15.jpeg" alt="Foto 15"></div>
+            <div class="gallery-item"><img class="gallery-img" src="images/foto16.jpeg" alt="Foto 16"></div>
+            <div class="gallery-item"><img class="gallery-img" src="images/foto17.jpeg" alt="Foto 17"></div>
+            <div class="gallery-item"><img class="gallery-img" src="images/foto18.jpeg" alt="Foto 18"></div>
+            <div class="gallery-item"><img class="gallery-img" src="images/foto19.jpeg" alt="Foto 19"></div>
+            <div class="gallery-item"><img class="gallery-img" src="images/foto20.jpeg" alt="Foto 20"></div>
+            <div class="gallery-item"><img class="gallery-img" src="images/foto21.jpeg" alt="Foto 21"></div>
+            <div class="gallery-item"><img class="gallery-img" src="images/foto22.jpeg" alt="Foto 22"></div>
+            <div class="gallery-item"><img class="gallery-img" src="images/foto23.jpeg" alt="Foto 23"></div>
 
             <!-- .jpg 24-40 -->
-            <div class="gallery-item"><img src="images/foto24.jpg" alt="Foto 24"></div>
-            <div class="gallery-item"><img src="images/foto25.jpg" alt="Foto 25"></div>
-            <div class="gallery-item"><img src="images/foto26.jpg" alt="Foto 26"></div>
-            <div class="gallery-item"><img src="images/foto27.jpg" alt="Foto 27"></div>
-            <div class="gallery-item"><img src="images/foto28.jpg" alt="Foto 28"></div>
-            <div class="gallery-item"><img src="images/foto29.jpg" alt="Foto 29"></div>
-            <div class="gallery-item"><img src="images/foto30.jpg" alt="Foto 30"></div>
-            <div class="gallery-item"><img src="images/foto31.jpg" alt="Foto 31"></div>
-            <div class="gallery-item"><img src="images/foto32.jpg" alt="Foto 32"></div>
-            <div class="gallery-item"><img src="images/foto33.jpg" alt="Foto 33"></div>
-            <div class="gallery-item"><img src="images/foto34.jpg" alt="Foto 34"></div>
-            <div class="gallery-item"><img src="images/foto35.jpg" alt="Foto 35"></div>
-            <div class="gallery-item"><img src="images/foto36.jpg" alt="Foto 36"></div>
-            <div class="gallery-item"><img src="images/foto37.jpg" alt="Foto 37"></div>
-            <div class="gallery-item"><img src="images/foto38.jpg" alt="Foto 38"></div>
-            <div class="gallery-item"><img src="images/foto39.jpg" alt="Foto 39"></div>
-            <div class="gallery-item"><img src="images/foto40.jpg" alt="Foto 40"></div>
+            <div class="gallery-item"><img class="gallery-img" src="images/foto24.jpg" alt="Foto 24"></div>
+            <div class="gallery-item"><img class="gallery-img" src="images/foto25.jpg" alt="Foto 25"></div>
+            <div class="gallery-item"><img class="gallery-img" src="images/foto26.jpg" alt="Foto 26"></div>
+            <div class="gallery-item"><img class="gallery-img" src="images/foto27.jpg" alt="Foto 27"></div>
+            <div class="gallery-item"><img class="gallery-img" src="images/foto28.jpg" alt="Foto 28"></div>
+            <div class="gallery-item"><img class="gallery-img" src="images/foto29.jpg" alt="Foto 29"></div>
+            <div class="gallery-item"><img class="gallery-img" src="images/foto30.jpg" alt="Foto 30"></div>
+            <div class="gallery-item"><img class="gallery-img" src="images/foto31.jpg" alt="Foto 31"></div>
+            <div class="gallery-item"><img class="gallery-img" src="images/foto32.jpg" alt="Foto 32"></div>
+            <div class="gallery-item"><img class="gallery-img" src="images/foto33.jpg" alt="Foto 33"></div>
+            <div class="gallery-item"><img class="gallery-img" src="images/foto34.jpg" alt="Foto 34"></div>
+            <div class="gallery-item"><img class="gallery-img" src="images/foto35.jpg" alt="Foto 35"></div>
+            <div class="gallery-item"><img class="gallery-img" src="images/foto36.jpg" alt="Foto 36"></div>
+            <div class="gallery-item"><img class="gallery-img" src="images/foto37.jpg" alt="Foto 37"></div>
+            <div class="gallery-item"><img class="gallery-img" src="images/foto38.jpg" alt="Foto 38"></div>
+            <div class="gallery-item"><img class="gallery-img" src="images/foto39.jpg" alt="Foto 39"></div>
+            <div class="gallery-item"><img class="gallery-img" src="images/foto40.jpg" alt="Foto 40"></div>
         </div>
     </section>
 
@@ -70,53 +70,55 @@
         <p>&copy; 2025 Özge ile Anılar. Tüm hakları saklıdır.</p>
     </footer>
 
-     <div id="lightbox" class="lightbox">
-    <span class="close">&times;</span>
-    <img class="lightbox-img" id="lightbox-img">
-    <a class="prev">&#10094;</a>
-    <a class="next">&#10095;</a>
-  </div>
+    <!-- 🔹 Lightbox (tam ekran foto gösterici) -->
+    <div id="lightbox" class="lightbox">
+        <span class="close">&times;</span>
+        <img class="lightbox-img" id="lightbox-img">
+        <a class="prev">&#10094;</a>
+        <a class="next">&#10095;</a>
+    </div>
 
-  <script>
-    const images = document.querySelectorAll('.gallery-img');
-    const lightbox = document.getElementById('lightbox');
-    const lightboxImg = document.getElementById('lightbox-img');
-    const close = document.querySelector('.close');
-    const next = document.querySelector('.next');
-    const prev = document.querySelector('.prev');
-    let currentIndex = 0;
+    <script>
+        const images = document.querySelectorAll('.gallery-img');
+        const lightbox = document.getElementById('lightbox');
+        const lightboxImg = document.getElementById('lightbox-img');
+        const close = document.querySelector('.close');
+        const next = document.querySelector('.next');
+        const prev = document.querySelector('.prev');
+        let currentIndex = 0;
 
-    images.forEach((img, index) => {
-      img.addEventListener('click', () => {
-        currentIndex = index;
-        lightbox.style.display = 'flex';
-        lightboxImg.src = img.src;
-      });
-    });
+        images.forEach((img, index) => {
+            img.addEventListener('click', () => {
+                currentIndex = index;
+                lightbox.style.display = 'flex';
+                lightboxImg.src = img.src;
+            });
+        });
 
-    close.addEventListener('click', () => lightbox.style.display = 'none');
-    next.addEventListener('click', nextImage);
-    prev.addEventListener('click', prevImage);
+        close.addEventListener('click', () => lightbox.style.display = 'none');
+        next.addEventListener('click', nextImage);
+        prev.addEventListener('click', prevImage);
 
-    function nextImage() {
-      currentIndex = (currentIndex + 1) % images.length;
-      lightboxImg.src = images[currentIndex].src;
-    }
+        function nextImage() {
+            currentIndex = (currentIndex + 1) % images.length;
+            lightboxImg.src = images[currentIndex].src;
+        }
 
-    function prevImage() {
-      currentIndex = (currentIndex - 1 + images.length) % images.length;
-      lightboxImg.src = images[currentIndex].src;
-    }
+        function prevImage() {
+            currentIndex = (currentIndex - 1 + images.length) % images.length;
+            lightboxImg.src = images[currentIndex].src;
+        }
 
-    window.addEventListener('click', (e) => {
-      if (e.target === lightbox) lightbox.style.display = 'none';
-    });
+        window.addEventListener('click', (e) => {
+            if (e.target === lightbox) lightbox.style.display = 'none';
+        });
 
-    document.addEventListener('keydown', (e) => {
-      if (e.key === 'Escape') lightbox.style.display = 'none';
-      if (e.key === 'ArrowRight') nextImage();
-      if (e.key === 'ArrowLeft') prevImage();
-    });
-  </script>
+        document.addEventListener('keydown', (e) => {
+            if (e.key === 'Escape') lightbox.style.display = 'none';
+            if (e.key === 'ArrowRight') nextImage();
+            if (e.key === 'ArrowLeft') prevImage();
+        });
+    </script>
 </body>
 </html>
+
