--- a/about.html
+++ b/about.html
@@ -13,6 +13,7 @@
         <li><a href="index.html">Ana Sayfa</a></li>
         <li><a href="about.html" class="active">İçimdekiler</a></li>
         <li><a href="gallery.html">Galeri</a></li>
+        <li><a href="music.html">Şarkılarımız</a></li>
       </ul>
     </nav>
   </header>
