--- a/gallery.html
+++ b/gallery.html
@@ -13,6 +13,7 @@
             <a href="index.html">Ana Sayfa</a>
             <a href="gallery.html" class="active">Galeri</a>
             <a href="about.html">Hakkımızda</a>
+            <a href="music.html">Şarkılarımız</a>
         </nav>
     </header>
 
