--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
             <a href="index.html">Ana Sayfa</a>
             <a href="gallery.html">Galeri</a>
             <a href="about.html">Hakkımızda</a> <!-- Hakkımızda sayfasına bağlantı ekledik -->
+            <a href="music.html">Şarkılarımız</a>
         </nav>
     </header>
 
